improve crontab integration

--- a/env.sh.example
+++ b/env.sh.example
@@ -1,3 +1,4 @@
-access_token=xx
+. /etc/profile
+access_token=todo
 api_url=https://api.unsplash.com/photos/random
 dest_dir=$HOME/Pictures/unsplash
